--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,124 @@
 :root {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   --bg-color-1:#ffe600;
   --bg-color-2:#1c1c1c;
   --bg-color-3:#f5f5f5;
   --text-head-color:#8f8f8f;
   --text-color:#d4d4d4;
-}
+  scroll-behavior: smooth; }
 
 body {
   font-family: 'Work Sans', sans-serif;
-}
+  height: 3000px; }
 
 h1, h2, h3 {
-  letter-spacing: 13px;
-}
+  letter-spacing: 13px; }
 
 p {
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 ul {
-  list-style: none;
-}
+  list-style: none; }
+
+.container {
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto; }
+  @media (max-width: 577px) {
+    .container {
+      width: 90%; } }
+  @media (min-width: 578px) {
+    .container {
+      width: 548px; } }
+  @media (min-width: 992px) {
+    .container {
+      width: 962px; } }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px; } }
+
+header.header {
+  width: 100%;
+  height: 500px;
+  background-image: url("../../images/header.jpg");
+  padding-top: 1.5rem;
+  background-size: cover;
+  position: relative;
+  z-index: 1; }
+  header.header .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(2, 2, 2, 0.54);
+    z-index: -1; }
+  header.header .nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    /*background-color: #00000029;*/
+    box-shadow: none; }
+    header.header .nav__top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+    header.header .nav__img {
+      height: 3.5rem;
+      cursor: pointer; }
+    header.header .nav__icon {
+      color: var(--bg-color-1);
+      font-size: 30px;
+      cursor: pointer; }
+    header.header .nav__list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 0px;
+      background-color: var(--bg-color-2);
+      padding: 0;
+      position: absolute;
+      width: 100%;
+      right: 0;
+      top: 63px;
+      overflow-y: hidden;
+      border-bottom-right-radius: 20px;
+      border-bottom-left-radius: 20px;
+      -moz-transition: height 0.3s;
+      -o-transition: height 0.3s;
+      -ms-transition: height 0.3s;
+      -webkit-transition: height 0.3s; }
+      header.header .nav__list .nav__item {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+        text-align: center;
+        max-width: 68px;
+        -moz-transition: max-width 0.3s;
+        -o-transition: max-width 0.3s;
+        -ms-transition: max-width 0.3s;
+        -webkit-transition: max-width 0.3s; }
+        header.header .nav__list .nav__item:hover {
+          border-bottom: 1px solid var(--bg-color-1);
+          padding-bottom: calc(1.5rem - 1px);
+          max-width: 90%;
+          width: 90%; }
+        header.header .nav__list .nav__item > a {
+          color: white; }
+    header.header .nav__list.show {
+      height: 375px; }
+    header.header .nav__list.show {
+      display: flex;
+      border-top: 1px solid var(--bg-color-1); }
+  header.header .nav.toggle_nav {
+    box-shadow: 0px 2px 6px 0px grey;
+    background-color: var(--bg-color-2); }
+
 /*# sourceMappingURL=index.css.map */
