--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -1,1 +1,21 @@
+.container {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
 
+    @media (max-width: $MaxSmallScreen) {
+        width: 90%;
+    }
+
+    @media (min-width: $MinSmallScreen) {
+        width: $MinSmallScreen - 30px;
+    }
+
+    @media (min-width: $MinMediumScreen) {
+        width: $MinMediumScreen - 30px;
+    }
+
+    @media (min-width: $MinLargeScreen) {
+        width: $MinLargeScreen - 30px;
+    }
+}
