--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,6 +1,6 @@
 header.header {
     width: 100%;
-    height: 500px;
+    height: 600px;
     background-image: url("../../images/header.jpg");
     padding-top: 1.5rem;
     background-size: cover;
@@ -80,5 +80,79 @@ header.header {
         box-shadow: 0px 2px 6px 0px grey;
         background-color: var(--bg-color-2);
 
+    }
+
+
+    .head{
+        width: 100%;
+        height: 300px;
+        color: white;
+        margin-top: 6.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-weight: 100;
+        text-align: center;
+        line-height: 1.5;
+        h2{
+            font-weight: 100;
+            margin-bottom: -10px;
+        }
+    }
+
+    .bottom-arrow{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        height: 65px;
+        bottom: 16px;
+        @include prefixes(transform,translateX(-50%));
+        z-index: -1;
+        > img{
+            width: 32px;
+        }
+
+        .arrows{
+            text-align: center;
+            color: white;
+            position: relative;
+
+            .arrow span{
+                height: 20px;
+                width: 2px;
+                background-color: white;
+                position: absolute;
+
+            }
+            .arrow:first-of-type{
+                >span{
+                    top: 7px;
+                    height: 11px;
+                }
+                span:first-of-type{
+                    @include prefixes(transform, rotateZ(-45deg));
+                    right:19px;
+
+                }
+                span:last-of-type{
+                    @include prefixes(transform, rotateZ(45deg));
+                    right: 11px;
+
+                }
+            }
+            .arrow:last-of-type{
+                position: relative;
+                top: 5px;
+                span:first-of-type{
+                    @include prefixes(transform, rotateZ(-45deg));
+                    right:22px;
+                }
+                span:last-of-type{
+                    @include prefixes(transform, rotateZ(45deg));
+                    right: 8px;
+                }
+            }
+        }
     }
 }
