--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -2,6 +2,8 @@
     width: 1170px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 
     @media (max-width: $MaxSmallScreen) {
         width: 90%;
