created UnderHeader Section

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -21,8 +21,8 @@ h1,h2, h3 {
 
 
 p {
-    line-height: 1.5;
-    letter-spacing: 5px;
+    line-height: 2.2;
+    color: var(--text-color);
 }
 
 a {
