--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -2,9 +2,12 @@ $bgColor-1: #ffe600;
 $bgColor-2: #1c1c1c;
 $bgColor-3: #f5f5f5;
 $TextHeadColor: #8f8f8f;
-$TextColor: #d4d4d4;
+$TextColor: #838383;
 
 $MaxSmallScreen: 577px;
 $MinSmallScreen: 578px;
 $MinMediumScreen: 992px;
 $MinLargeScreen: 1200px;
+
+
+$grid_division:12;
