--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -163,3 +163,15 @@ header.header {
         top: 17px;
     }
 }
+
+
+.under_header{
+    flex-direction: column;
+    margin-top: 100px;
+    gap: 50px 0;
+    i{
+        font-size: 76px;
+        color: var(--bg-color-1);
+    }
+
+}
