--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -1,23 +1,6 @@
-.container {
-    width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
 
-    @media (max-width: $MaxSmallScreen) {
-        width: 90%;
-    }
 
-    @media (min-width: $MinSmallScreen) {
-        width: $MinSmallScreen - 30px;
-    }
 
-    @media (min-width: $MinMediumScreen) {
-        width: $MinMediumScreen - 30px;
-    }
-
-    @media (min-width: $MinLargeScreen) {
-        width: $MinLargeScreen - 30px;
-    }
+.container{
+  @include container();
 }
