--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -1,6 +1,6 @@
 $bgColor-1: #ffe600;
 $bgColor-2: #1c1c1c;
-$bgColor-3: #f5f5f5;
+$bgColor-3: #F4F4F4;
 $TextHeadColor: #8f8f8f;
 $TextColor: #838383;
 
@@ -9,5 +9,4 @@ $MinSmallScreen: 578px;
 $MinMediumScreen: 992px;
 $MinLargeScreen: 1200px;
 
-
-$grid_division:12;
+$grid_division: 12;
