--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,7 +8,7 @@
 
 @import "./components/header";
 
-@import "./components/buttons";
+@import "./components/servioces";
 
 @import "./pages/HomePage";
 
